load("//config/cc:BUILD.bzl",
     "BASE_SRCS", "BASE_DEPS", "BASE_INCLUDE_PATHS",
     "BASE_COPTS", "BASE_DEFINES", "BASE_LINKOPTS")

SRCS          = BASE_SRCS + ["macros.h", "//src:trace_dev.h"]
DEPS          = BASE_DEPS + [
    "@s7_tools//src:s7plugin_test_config",
    "@gopt//src:gopt",
    "@unity//src:unity",
    "@uthash//src:uthash",
]
INCLUDE_PATHS = BASE_INCLUDE_PATHS + [
    "-Isrc",
    "-I$(@gopt)/src",
    "-I$(@unity)/src",
    "-I$(@uthash)/src",
    "-I$(GENDIR)/$(@s7_tools)/src",
]
COPTS         = BASE_COPTS + INCLUDE_PATHS + [
    # macos only?
    "-Wno-gnu-statement-expression" # TRACE_S7_DUMP macro
]
DEFINES       = BASE_DEFINES
LINKOPTS      = BASE_LINKOPTS
TOOLCHAINS = ["//:test_repo_paths"]
TIMEOUT = "short"
TAGS = ["json"]

################################################################
test_suite(
    name  = "test",
    tests = [
        ":array_to_scm_test",
        # ":array_to_scm_dso_static_test",
        ":arrays_test",
        ":readers_test",
        ":map_to_scm_test",
        ":maps_test",
        # ":strings",
    ]
)

################################################################
cc_test(
    name          = "array_to_scm_test",
    linkstatic    = True,
    srcs          = SRCS + ["json_array_to_scm_test.c"],
    local_defines = DEFINES,
    deps          = DEPS + ["//src:cjson_s7"],
    copts         = COPTS,
    linkopts      = LINKOPTS,
    toolchains    = TOOLCHAINS,
    timeout       = TIMEOUT,
    tags          = TAGS + ["arrays", "conversion"]
)

cc_test(
    name          = "array_to_scm_dso_static_test",
    linkstatic    = True,
    srcs          = SRCS + ["json_array_to_scm_test.c"],
    data          = ["//src:cjson_s7_dso"],
    local_defines = DEFINES,
    deps          = DEPS,
    copts         = COPTS,
    linkopts      = LINKOPTS,
    toolchains    = TOOLCHAINS,
    timeout       = TIMEOUT,
    tags          = TAGS + ["arrays", "conversion"]
)

cc_test(
    name          = "arrays_test",
    linkstatic    = True,
    srcs          = SRCS + ["json_arrays_test.c"],
    local_defines = DEFINES,
    deps          = DEPS + ["@cjson_s7//src:cjson_s7"],
    copts         = COPTS,
    linkopts      = LINKOPTS,
    toolchains    = TOOLCHAINS,
    timeout       = TIMEOUT,
    tags          = TAGS + ["arrays"]
)

cc_test(
    name          = "map_to_scm_test",
    linkstatic    = True,
    srcs          = SRCS + ["json_map_to_scm_test.c"],
    local_defines = DEFINES,
    deps          = DEPS + ["@cjson_s7//src:cjson_s7"],
    copts         = COPTS,
    linkopts      = LINKOPTS,
    toolchains    = TOOLCHAINS,
    timeout       = TIMEOUT,
    tags          = TAGS + ["maps", "conversion"]
)

cc_test(
    name          = "maps_test",
    linkstatic    = True,
    srcs          = SRCS + ["json_maps_test.c"],
    local_defines = DEFINES,
    deps          = DEPS + ["//src:cjson_s7"],
    copts         = COPTS,
    linkopts      = LINKOPTS,
    toolchains    = TOOLCHAINS,
    timeout       = TIMEOUT,
    tags          = TAGS + ["maps"]
)

cc_test(
    name          = "readers_test",
    linkstatic    = True,
    srcs          = SRCS + ["json_readers_test.c"],
    local_defines = DEFINES,
    deps          = DEPS + ["//src:cjson_s7"],
    data          = ["//test/data:json"],
    copts         = COPTS,
    linkopts      = LINKOPTS,
    toolchains    = TOOLCHAINS,
    timeout       = TIMEOUT,
    tags          = TAGS + ["readers"]
)

# cc_test(
#     name = "work",
#     linkstatic = True,
#     srcs = ["json_work_test.c",
#             "//test/unit:common.c", "//test/unit:common.h",
#             "//src:libs7.h"],
#     local_defines = DEFINES,
#     deps = DEPS + [
#         "//dev",
#         # "//lib/libjson:json_s7"
#     ],
#     copts = COPTS + [
#         "-Isrc",
#         "-Idev",
#         "-Itest/unit",
#         "-I$(GENDIR)/lib/libjson",
#         "-I$(GENDIR)/external/libs7/lib/libjson",
#         # "-fno-pie"
#     ],
#     linkopts = LINKOPTS,
#     timeout = TIMEOUT,
#     tags = TAGS + ["maps"]
# )

# # cc_test(
# #     name = "strings",
# #     linkstatic = True,
# #     srcs = ["json_strings_test.c",
# #             "//test/unit:common.c", "//test/unit:common.h",
# #             "//src:libs7.h"],
# #     local_defines = DEFINES,
# #     data = ["//test/unit/libjson/data:strings.json"],
# #     deps = DEPS + [
# #         "//dev",
# #         "//src:s7",
# #         "//lib/libjson:json_s7"
# #     ],
# #     copts = COPTS + [
# #         "-Isrc",
# #         "-Idev",
# #         "-Itest/unit",
# #         "-I$(GENDIR)/lib/libjson",
# #         "-I$(GENDIR)/external/libs7/lib/libjson",
# #         # "-fno-pie"
# #     ],
# #     linkopts = LINKOPTS,
# #     timeout = TIMEOUT
# # )

