load("@libs7//plugin:MACROS.bzl", "s7_plugin_test")

load("//config/cc:CONFIG.bzl",
     "BASE_DEFINES", "BASE_LINKOPTS")

SRCS       = ["macros.h", "//src:trace_dev.h"]
DEPS       = ["//src:cjson_s7"]
COPTS      = ["-I$(@)/src",
              "-Wno-gnu-statement-expression"]
DEFINES    = BASE_DEFINES
LINKOPTS   = BASE_LINKOPTS
TOOLCHAINS = ["//:test_repo_paths"]
TIMEOUT    = "short"
TAGS       = ["json"]

################################################################
test_suite(
    name  = "test",
    tests = [
        ":array_to_scm_test",
        ":array_to_scm_dso_static_test",
        ":arrays_test",
        ":readers_test",
        ":map_to_scm_test",
        ":maps_test",
        # ":strings",
    ]
)

################################################################
s7_plugin_test(
    name          = "array_to_scm_test",
    srcs          = SRCS + ["json_array_to_scm_test.c"],
    local_defines = DEFINES,
    deps          = DEPS,
    copts         = COPTS,
    linkopts      = LINKOPTS,
    toolchains    = TOOLCHAINS,
    timeout       = TIMEOUT,
    tags          = TAGS + ["arrays", "conversion"]
)

s7_plugin_test(
    name          = "array_to_scm_dso_static_test",
    srcs          = SRCS + ["json_array_to_scm_test.c"],
    data          = ["//src:cjson_s7_dso"],
    local_defines = DEFINES,
    deps          = DEPS,
    copts         = COPTS,
    linkopts      = LINKOPTS,
    toolchains    = TOOLCHAINS,
    timeout       = TIMEOUT,
    tags          = TAGS + ["arrays", "conversion"]
)

s7_plugin_test(
    name          = "arrays_test",
    # linkstatic    = True,
    srcs          = SRCS + ["json_arrays_test.c"],
    deps          = DEPS,
    copts         = COPTS,
    linkopts      = LINKOPTS,
    local_defines = DEFINES,
    toolchains    = TOOLCHAINS,
    timeout       = TIMEOUT,
    tags          = TAGS + ["arrays"]
)

s7_plugin_test(
    name          = "map_to_scm_test",
    linkstatic    = True,
    srcs          = SRCS + ["json_map_to_scm_test.c"],
    local_defines = DEFINES,
    deps          = DEPS,
    copts         = COPTS,
    linkopts      = LINKOPTS,
    toolchains    = TOOLCHAINS,
    timeout       = TIMEOUT,
    tags          = TAGS + ["maps", "conversion"]
)

s7_plugin_test(
    name          = "maps_test",
    linkstatic    = True,
    srcs          = SRCS + ["json_maps_test.c"],
    local_defines = DEFINES,
    deps          = DEPS,
    copts         = COPTS,
    linkopts      = LINKOPTS,
    toolchains    = TOOLCHAINS,
    timeout       = TIMEOUT,
    tags          = TAGS + ["maps"]
)

s7_plugin_test(
    name          = "readers_test",
    # linkstatic    = True,
    srcs          = SRCS + ["json_readers_test.c"],
    local_defines = DEFINES,
    deps          = DEPS,
    data          = ["//test/data:json"],
    copts         = COPTS,
    linkopts      = LINKOPTS,
    toolchains    = TOOLCHAINS,
    timeout       = TIMEOUT,
    tags          = TAGS + ["readers"]
)

# cc_test(
#     name = "work",
#     linkstatic = True,
#     srcs = ["json_work_test.c",
#             "//test/unit:common.c", "//test/unit:common.h",
#             "//src:libs7.h"],
#     local_defines = DEFINES,
#     deps = DEPS + [
#         "//dev",
#         # "//lib/libjson:json_s7"
#     ],
#     copts = COPTS + [
#         "-Isrc",
#         "-Idev",
#         "-Itest/unit",
#         "-I$(GENDIR)/lib/libjson",
#         "-I$(GENDIR)/external/libs7/lib/libjson",
#         # "-fno-pie"
#     ],
#     linkopts = LINKOPTS,
#     timeout = TIMEOUT,
#     tags = TAGS + ["maps"]
# )

# # cc_test(
# #     name = "strings",
# #     linkstatic = True,
# #     srcs = ["json_strings_test.c",
# #             "//test/unit:common.c", "//test/unit:common.h",
# #             "//src:libs7.h"],
# #     local_defines = DEFINES,
# #     data = ["//test/unit/libjson/data:strings.json"],
# #     deps = DEPS + [
# #         "//dev",
# #         "//src:s7",
# #         "//lib/libjson:json_s7"
# #     ],
# #     copts = COPTS + [
# #         "-Isrc",
# #         "-Idev",
# #         "-Itest/unit",
# #         "-I$(GENDIR)/lib/libjson",
# #         "-I$(GENDIR)/external/libs7/lib/libjson",
# #         # "-fno-pie"
# #     ],
# #     linkopts = LINKOPTS,
# #     timeout = TIMEOUT
# # )

