load("@makeheaders//rules:makeheaders.bzl", "makeheaders")
load("@libs7//plugin:MACROS.bzl", "s7_plugin_test")
load("//config/cc:CONFIG.bzl",
     "BASE_COPTS",
     "BASE_LINKOPTS",
     "PROFILE")
load("@unity//src:BUILD.bzl", "unity_library")

SRCS       = ["macros.h", ":mkhdrs"]
DEPS       = ["//lib:cjson_s7"] # , ":libunity"]
COPTS      = [ # BASE_COPTS + [
    "-I$(GENDIR)/test",
    # "-Wno-gnu-statement-expression",
]
DEFINES    = PROFILE
LINKOPTS   = BASE_LINKOPTS
TIMEOUT    = "short"
TAGS       = ["json"]

################################################################
test_suite(
    name  = "test",
    tests = [
        ":array_to_scm_test",
        ":array_to_scm_dso_static_test",
        ":arrays_test",
        ":readers_test",
        ":map_to_scm_test",
        ":maps_test",
        # ":strings",
    ]
)

################################################################
s7_plugin_test(
    name          = "array_to_scm_test",
    srcs          = SRCS + ["json_array_to_scm_test.c"],
    deps          = DEPS,
    copts         = COPTS,
    linkopts      = LINKOPTS,
    defines       = DEFINES,
    timeout       = TIMEOUT,
    tags          = TAGS + ["arrays", "conversion"]
)

s7_plugin_test(
    name          = "array_to_scm_dso_static_test",
    srcs          = SRCS + ["json_array_to_scm_test.c"],
    data          = ["//lib:cjson_s7_dso"],
    defines       = DEFINES,
    deps          = DEPS,
    copts         = COPTS,
    linkopts      = LINKOPTS,
    timeout       = TIMEOUT,
    tags          = TAGS + ["arrays", "conversion"]
)

unity_library(
    name = "libunity",
    config = "//test/json_arrays_test:unity_config.h")

s7_plugin_test(
    name          = "arrays_test",
    libunity      = ":libunity",
    srcs          = SRCS + [
        "json_arrays_test.c",
        "//test/json_arrays_test:unity_config.h"
    ],
    deps          = DEPS,
    copts         = COPTS + ["-Itest/json_arrays_test"],
    linkopts      = LINKOPTS,
    defines       = DEFINES,
    local_defines = ["UNITY_INCLUDE_CONFIG_H"],
    timeout       = TIMEOUT,
    tags          = TAGS + ["arrays"]
)

s7_plugin_test(
    name          = "map_to_scm_test",
    linkstatic    = True,
    srcs          = SRCS + ["json_map_to_scm_test.c"],
    deps          = DEPS,
    copts         = COPTS,
    linkopts      = LINKOPTS,
    defines       = DEFINES,
    timeout       = TIMEOUT,
    tags          = TAGS + ["maps", "conversion"]
)

s7_plugin_test(
    name          = "maps_test",
    linkstatic    = True,
    srcs          = SRCS + ["json_maps_test.c"],
    deps          = DEPS,
    copts         = COPTS,
    linkopts      = LINKOPTS,
    defines       = DEFINES,
    timeout       = TIMEOUT,
    tags          = TAGS + ["maps"]
)

s7_plugin_test(
    name          = "readers_test",
    # linkstatic    = True,
    srcs          = SRCS + ["json_readers_test.c"],
    deps          = DEPS,
    data          = ["//test/data:json"],
    copts         = COPTS,
    linkopts      = LINKOPTS,
    defines       = DEFINES,
    timeout       = TIMEOUT,
    tags          = TAGS + ["readers"]
)

# s7_plugin_test(
#     name = "work",
#     linkstatic = True,
#     srcs = ["json_work_test.c",
#             "//test/unit:common.c", "//test/unit:common.h",
#             "//lib:libs7.h"],
#     local_defines = DEFINES,
#     deps = DEPS + [
#         "//dev",
#         # "//lib/libjson:json_s7"
#     ],
#     copts = COPTS + [
#         "-Isrc",
#         "-Idev",
#         "-Itest/unit",
#         "-I$(GENDIR)/lib/libjson",
#         "-I$(GENDIR)/external/libs7/lib/libjson",
#         # "-fno-pie"
#     ],
#     linkopts = LINKOPTS,
#     timeout = TIMEOUT,
#     tags = TAGS + ["maps"]
# )

# # cc_test(
# #     name = "strings",
# #     linkstatic = True,
# #     srcs = ["json_strings_test.c",
# #             "//test/unit:common.c", "//test/unit:common.h",
# #             "//lib:libs7.h"],
# #     local_defines = DEFINES,
# #     data = ["//test/unit/libjson/data:strings.json"],
# #     deps = DEPS + [
# #         "//dev",
# #         "//lib:s7",
# #         "//lib/libjson:json_s7"
# #     ],
# #     copts = COPTS + [
# #         "-Isrc",
# #         "-Idev",
# #         "-Itest/unit",
# #         "-I$(GENDIR)/lib/libjson",
# #         "-I$(GENDIR)/external/libs7/lib/libjson",
# #         # "-fno-pie"
# #     ],
# #     linkopts = LINKOPTS,
# #     timeout = TIMEOUT
# # )

makeheaders(
    name = "mkhdrs",
    hdrs_srcs = [
        "json_array_to_scm_test.c",
        "json_arrays_test.c",
        "json_map_to_scm_test.c",
        "json_maps_test.c",
        "json_readers_test.c",
        "json_work_test.c"
    ],
    additional_srcs = [
        "@liblogc//macros:ansi_colors.h"
    ] + select({
        "@obazl_tools_cc//profile:dev?": [
            "@libs7//macros:s7_logging_debug.h",
            "@liblogc//macros:logging_debug.h"
        ],
        "//conditions:default": [
            "@libs7//macros:s7_logging_ndebug.h",
            "@liblogc//macros:logging_ndebug.h"
        ]
    }),
)

